iac/k8s/deploy-api.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  namespace: observer
spec:
  replicas: 1
  template:
    metadata:
     name: api
     labels:
       app: observer
       service: api
       env: DEV
    spec:
      containers:
        - name: api
          image: funf/observer:api-0.0.1
          ports:
          - containerPort: 5000
            name: api
          volumeMounts:
          - name: data-api
            mountPath: /home/observer/data
      volumes:
          - name: data-api
            persistentVolumeClaim:
              claimName: api-pv-claim
---

kind: Service
apiVersion: v1
metadata:
  name: api
  namespace: observer
spec:
  selector:
    app: observer
    service: api
    env: DEV
  ports:
  - protocol: "TCP"
    # Port accessible inside cluster
    port: 5000
    # Port to forward to inside the pod
    targetPort: 5000
    # Port accessible outside cluster
    nodePort: 30102
  type: LoadBalancer
  externalIPs:
  - 192.168.1.10
