iac/k8s/deploy-client.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: observer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: observer
      service: client
      env: DEV
  template:
    metadata:
     name: client
     labels:
       app: observer
       service: client
       env: DEV
    spec:
      containers:
        - name: client
          image: funf/observer:client-0.0.1
          ports:
          - containerPort: 3000
            name: client
          volumeMounts:
          - name: data-client
            mountPath: /home/observer/data
      volumes:
          - name: data-client
            persistentVolumeClaim:
              claimName: client-pv-claim
---

kind: Service
apiVersion: v1
metadata:
  name: cient
  namespace: observer
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      nodePort: 30101
  selector:
    app: observer
    service: client
    env: DEV
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: observer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
